--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -1,21 +1,7 @@
 services:
-  nginx:
-    image: "jc21/nginx-proxy-manager:latest"
-    container_name: nginx-proxy-manager
-    restart: unless-stopped
-    environment:
-      TZ: "Australia/Brisbane"
-    ports:
-      - "80:80"
-      - "81:81"
-      - "443:443"
-    volumes:
-      - ./data:/data
-      - ./letsencrypt:/etc/letsencrypt
   jellyfin:
     image: jellyfin/jellyfin
     container_name: jellyfin
-    user: uid:gid
     ports:
       - 8096:8096/tcp
       - 7359:7359/udp
@@ -34,10 +20,10 @@ services:
         source: /path/to/fonts
         target: /usr/local/share/fonts/custom
         read_only: true
-    restart: "unless-stopped"
+    restart: unless-stopped
     # Optional - alternative address used for autodiscovery
     environment:
-      - JELLYFIN_PublishedServerUrl=http://example.com
+      - JELLYFIN_PublishedServerUrl=http://${JELLYFIN_HOST_URL}
     # Optional - may be necessary for docker healthcheck to pass if running in host network mode
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - host.docker.internal:host-gateway
